Prometheus/10-monitoring-ns.yaml
apiVersion: v1                                                                                                                                                                                                      
kind: Namespace
metadata:
  name: monitoring
