Prometheus/30-grafana.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  ports:
  - port: 3000
    protocol: TCP
  selector:
    app: grafana
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
    component: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
      component:  monitoring
  template:
    metadata:
      labels:
        app: grafana
        component:  monitoring
    spec:
      securityContext:
        fsGroup: 472
      containers:
      - image: grafana/grafana:master
        name: grafana-core
        #command:
        #  - sleep
        #  - "5000"
        imagePullPolicy: IfNotPresent
        resources:
          # keep request = limit to keep this container in guaranteed class
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
            #            #env:
            #          # #env:The following env variables set up basic auth twith the default admin user and admin password.
            #          - #env:name:  GF_SECURITY_ADMIN_PASSWORD
            #            #env:value: admin
            #          - #env:name:  PROMETHEUS_ENDPOINT
            #            #env:value: http://prometheus:9090
          #readinessProbe:
          #httpGet:
          #path: /login
          #port: 3000
          #initialDelaySeconds: 30
          #timeoutSeconds: 1
        volumeMounts:
        - name: grafana-persistent-storage
          mountPath: /var/lib/grafana
      volumes:
      - name: grafana-persistent-storage
        emptyDir: {}
