Prometheus/11-monitoring-ingress.yml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "false"
    ingress.kubernetes.io/ssl-redirect: "false"


spec:
  rules:
  - host: prometheus.erkan.erkmerk.de
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 9090
  - host: alertmanager.erkan.erkmerk.de
    http:
      paths:
      - path: /
        backend:
          serviceName: alertmanager
          servicePort: 9093
  - host: grafana.erkan.erkmerk.de
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
